# applyst

./: CMakeLists.txt  README.md
root/src/: app.html  base.html  index.html  search.html
src/: CMakeLists.txt  applyst.cpp  applyst.h  root.cpp  root.h
